--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+      <--! link to javascript -->
     <script src="index.js"></script>
+      <--! text that gets replaced every question, ie. Fill in the blank -->
+    <h1 id="question"></h1>
+      <--! the secondary part of the question, ie. I am the _____ -->
+    <h2 id="text"></h2>
+      <--! the first multiple choice answer, ie. Ohio -->
+    <button id="bt1"></button>
+      <--! the second multiple choice option, ie. Fanum Tax -->
+    <button id="bt2"></button>
+      <--! the third multiple chice option, ie. Sigma -->
+    <button id="bt3"></button>
   </body>
 </html>
