--- a/index.html
+++ b/index.html
@@ -8,17 +8,31 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <--! link to javascript -->
+    
+      <--! Link to javascript so code is less messy here.-->
     <script src="index.js"></script>
-      <--! text that gets replaced every question, ie. Fill in the blank -->
-    <h1 id="question"></h1>
-      <--! the secondary part of the question, ie. I am the _____ -->
-    <h2 id="text"></h2>
-      <--! the first multiple choice answer, ie. Ohio -->
-    <button id="bt1"></button>
-      <--! the second multiple choice option, ie. Fanum Tax -->
-    <button id="bt2"></button>
-      <--! the third multiple chice option, ie. Sigma -->
-    <button id="bt3"></button>
+      <--! These are all the elements that will be replaced using javascript -->
+    <div id="replaceable">
+        <--! Text that gets replaced every question, ie. Fill in the blank -->
+      <h1 id="question"></h1>
+        <--! The secondary part of the question, ie. I am the _____ -->
+      <h2 id="text"></h2>
+        <--! Mc stands for multiple choice. Below are all of the multiple choice answers that can be toggled on/off and replaced using javascript. -->
+      <div id="mc">
+          <--! The first multiple choice answer, ie. Ohio -->
+        <button id="bt1"></button>
+          <--! The second multiple choice option, ie. Fanum Tax -->
+        <button id="bt2"></button>
+          <--! The third multiple chice option, ie. Sigma -->
+        <button id="bt3"></button>
+          <--! The fourth multiple choice option, ie. Mewing -->
+        <button id="bt4"></button>
+      </div>
+        <--! Ta stands for text answer, as the user will have to type the answer in instead of multiple choice. -->
+      <div id="ta">
+          <--! The textbox that the user will type in -->
+        <input type="text" id="text">
+      </div>
+     </div>
   </body>
 </html>
