--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <!-- Link to javascript so code is less messy here.-->
     <script src="index.js"></script>
       <!-- These are all the elements that will be replaced using javascript -->
+      <!-- temporary -->
+    <button onclick="newquestion()">get new question</button>
     <div id="replaceable">
         <!-- Text that gets replaced every question, ie. Fill in the blank -->
       <h1 id="question"></h1>
