--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SlangLingo</title>
-   
   </head>
+  <style></style>
   <body>
-    
-      <!-- Link to javascript so code is less messy here.-->
-    <script src="index.js"></script>
+
+
       <!-- These are all the elements that will be replaced using javascript -->
       <!-- temporary -->
     <button onclick="newquestion()">get new question</button>
@@ -36,5 +35,7 @@
         <input type="text" id="text">
       </div>
      </div>
+     <!-- Link to javascript so code is less messy here.-->
+   <script src="index.js"></script>
   </body>
 </html>
