--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SlangLingo</title>
+    <style>
+
+    button {
+      background-color: #18b551;
+      border: none;
+      color: #e0e0e0;
+      padding: 15px 32px;
+      text-align: center;
+      display: inline-block;
+      font-size: 16px;
+      border-radius: 12px;
+      transition-duration: 0.4s;
+    }
+    button:hover {
+      background-color: #04cf3a;
+    }
+
+
+
+    </style>
   </head>
   <style></style>
   <body>
