--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         <!-- Mc stands for multiple choice. Below are all of the multiple choice answers that can be toggled on/off and replaced using javascript. -->
       <div id="mc">
           <!-- The first multiple choice answer, ie. Ohio -->
-        <button id="bt1" onclick="mc1a()"></button>
+        <button id="bt1"></button>
           <!-- The second multiple choice option, ie. Fanum Tax -->
-        <button id="bt2" onclick="mc2a()"></button>
+        <button id="bt2"></button>
           <!-- The third multiple chice option, ie. Sigma -->
-        <button id="bt3" onclick="mc3a()"></button>
+        <button id="bt3"></button>
           <!-- The fourth multiple choice option, ie. Mewing -->
-        <button id="bt4" onclick="mc4a()"></button>
+        <button id="bt4"></button>
       </div>
         <!-- Ta stands for text answer, as the user will have to type the answer in instead of multiple choice. -->
       <div id="ta">
