--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
       <div id="ta">
           <!-- The textbox that the user will type in -->
         <input type="text" id="text">
+          <!-- The submit button -->
+        <button id="sub">submit</button>
       </div>
      </div>
      <!-- Link to javascript so code is less messy here.-->
