--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
       font-size: 16px;
       border-radius: 12px;
       transition-duration: 0.4s;
+      width: 150px;
     }
     button:hover {
       background-color: #04cf3a;
     }
 
+    #mc {
+    display: flex; /* Use flexbox to arrange buttons in a row */
+    justify-content: space-between; /* Optional: space out buttons */
+    }
+
+    
 
 
     </style>
