--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
     }
 
     #mc {
-    display: flex; /* Use flexbox to arrange buttons in a row */
-    justify-content: space-between; /* Optional: space out buttons */
+    display: flex;
+    justify-content: space-between;
+    max-width: 600px;
+    margin: 0 auto; 
+    overflow: hidden;
     }
 
     
