--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SlangLingo</title>
     <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box; /* Make sure padding is included in total width/height */
+    }
 
     button {
       background-color: #18b551;
       border: none;
       color: #e0e0e0;
-      padding: 15px 32px;
       text-align: center;
       display: inline-block;
       font-size: 16px;
@@ -27,7 +31,6 @@
     display: flex;
     justify-content: space-between;
     max-width: 600px;
-    margin: 0 auto; 
     overflow: hidden;
     }
 
