--- a/index.html
+++ b/index.html
@@ -6,35 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SlangLingo</title>
     <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box; /* Make sure padding is included in total width/height */
-    }
 
     button {
       background-color: #18b551;
       border: none;
       color: #e0e0e0;
+      padding: 15px 32px;
       text-align: center;
       display: inline-block;
       font-size: 16px;
       border-radius: 12px;
       transition-duration: 0.4s;
-      width: 150px;
     }
     button:hover {
       background-color: #04cf3a;
     }
 
-    #mc {
-    display: flex;
-    justify-content: space-between;
-    max-width: 600px;
-    overflow: hidden;
-    }
-
-    
 
 
     </style>
