--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- tells you wrong or right -->
     <div class="anscheck">
       <img height="70px" width="70px" src="NOP.png">  
-      <h1 id="chktxt"></h1>
+      <h1 id="chktxt">hi</h1>
     </div>
      <!-- Link to javascript so code is less messy here.-->
    <script src="index.js"></script>
