Update and rename index.html to slang.html

--- a/slang.html
+++ b/slang.html
@@ -60,7 +60,7 @@
       <h1 id="chktxt">hi</h1>
     </div>
      <!-- Link to javascript so code is less messy here.-->
-   <script src="index.js"></script>
+   <script src="slang.js"></script>
     
   </body>
 </html>
