--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SlangLingo</title>
     <style>
-      p {
+      body {
         background-color: linear-gradient(#32a868, #1d7d36)
       }
     </style>
