--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>SlangLingo</title>
     <style>
       body {
-        background-color: linear-gradient(#32a868, #1d7d36)
+        background-image: linear-gradient(#32a868, #1d7d36)
       }
     </style>
   </head>
