--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       body {
         background-image: linear-gradient(#32a868, #1d7d36)
       }
+      @font-face {
+        font-family: 'Montserrat';
+        src: url('Mon.ttf');
+      }
     </style>
   </head>
   <body>
