--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SlangLingo</title>
     <style>
+      html{
+        min-height: 100%;
+        position:relative;
+      }
       body {
+        height: 100%;
+        width: 100%;
         background-image: linear-gradient(#32a868, #1d7d36)
       }
       /* Google Fonts */
