--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SlangLingo</title>
+    <title>BandLingo</title>
     <style>
       html{
         min-height: 100%;
@@ -30,11 +30,11 @@
   
   <body>
     <h1>
-      SlangLingo
+      BandLingo
     </h1>
     <p>
       
-      Imagine a world where everyone all ages can communicate without feeling like they're not missing vocabulary. That's our goal here at slanglingo.
+      Imagine a world where everyone can play an instrument. Thats our goal here at BandLingo.
     </p>
   </body>
 </html>
